log/HamamatsuApp_log_181126_114940.txt
2018-11-26T11:49:40|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 32, in <module>
    app = HamamatsuApp(sys.argv)
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 20, in setup
    from CameraMeasurement import HamamatsuMeasurement
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraMeasurement.py", line 186
    if self.interrupt_measurement_called:
    ^
IndentationError: unexpected indent

